# caso4

./: .env  Caso4.postman_collection.json  Dockerfile  README.md  app.py  dataload.py  docker-compose.yml  docker_stats_output.txt  mongoDb.py  pyproject.toml  requirements.txt  tests.py
