[tool.poetry]
name = "caso4"
version = "0.1.0"
description = ""
authors = ["samuel valverde <savalverde@estudiantec.cr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
pymongo = "^4.10.1"
redis = "^5.1.0"
Werkzeug = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
